[gd_scene load_steps=29 format=2]

[ext_resource path="res://source/Game.gd" type="Script" id=1]
[ext_resource path="res://source/CameraShake2D.gd" type="Script" id=2]
[ext_resource path="res://sounds/001_Synthwave_4k.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/wind_loop.ogg" type="AudioStream" id=4]
[ext_resource path="res://source/Solitaire.gd" type="Script" id=5]
[ext_resource path="res://fonts/Font_Mini.tres" type="DynamicFont" id=6]
[ext_resource path="res://images/dialoguebox1.png" type="Texture" id=7]
[ext_resource path="res://scenes/SquareButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://fonts/Font_Mini_Outline.tres" type="DynamicFont" id=9]
[ext_resource path="res://source/Stock.gd" type="Script" id=10]
[ext_resource path="res://images/trumps_alt.png" type="Texture" id=11]
[ext_resource path="res://source/Perfect.gd" type="Script" id=12]
[ext_resource path="res://fonts/Font_Blocks_Big.tres" type="DynamicFont" id=13]
[ext_resource path="res://source/Menu.gd" type="Script" id=14]
[ext_resource path="res://scenes/MenuButton.tscn" type="PackedScene" id=15]
[ext_resource path="res://images/bn_logo_120.png" type="Texture" id=16]

[sub_resource type="Animation" id=1]
resource_name = "color"
length = 100.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 50, 100 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0235294, 0.160784, 0.372549, 1 ), Color( 0.278431, 0.0352941, 0.878431, 1 ), Color( 0.0235294, 0.160784, 0.372549, 1 ) ]
}

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.797927, 1 )
colors = PoolColorArray( 1, 1, 1, 0.866667, 1, 1, 1, 0.862745, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 128

[sub_resource type="Curve" id=4]
min_value = -0.1
max_value = 0.1
_data = [ Vector2( 0, 0 ), 0.0, 0.104201, 0, 1, Vector2( 0.249135, 0.02596 ), 0.44506, 0.44506, 0, 0, Vector2( 0.521626, -0.06028 ), 0.0, 0.0, 0, 0, Vector2( 0.737889, 0.03124 ), -0.940985, -0.940985, 0, 0, Vector2( 1, 0 ), -0.119186, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=5]
width = 256
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 720, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 10, 0 )
angular_velocity = 1.4013e-44
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel_curve = SubResource( 5 )
scale = 2.0
scale_random = 1.0
color_ramp = SubResource( 3 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.530516, 1 )
colors = PoolColorArray( 0.917647, 0.2, 0.52549, 1, 0.905882, 0.2, 0.513726, 0.329412, 0.894118, 0.2, 0.505882, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )
width = 1024

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 48.4613, 71.3048 )

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 0.835294, 0.196078, 0.505882, 1, 0.835294, 0.196078, 0.505882, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 34.48
initial_velocity_random = 0.15
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 11 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true
script = ExtResource( 2 )
m_decay = 1.1
m_max_offset = Vector2( 10, 10 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="AudioSourceMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -18.0
autoplay = true

[node name="AudioSourceWind" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
autoplay = true

[node name="Tween" type="Tween" parent="."]

[node name="Pivot2D" type="Node2D" parent="."]
position = Vector2( 640, 360 )

[node name="AudioSource" type="AudioStreamPlayer2D" parent="Pivot2D"]

[node name="Background" type="Node2D" parent="Pivot2D"]

[node name="ColorRect" type="ColorRect" parent="Pivot2D/Background"]
margin_left = -1250.0
margin_top = -360.0
margin_right = 1690.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0.0235294, 0.160784, 0.372549, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot2D/Background/ColorRect"]
autoplay = "color"
anims/color = SubResource( 1 )

[node name="SnowParticles2D" type="Particles2D" parent="Pivot2D/Background"]
visible = false
position = Vector2( 0, -416.88 )
amount = 500
lifetime = 10.5
preprocess = 10.0
randomness = 1.0
process_material = SubResource( 6 )

[node name="SnowParticles2DCPU" type="CPUParticles2D" parent="Pivot2D/Background"]
visible = false
position = Vector2( 0, -416.88 )
amount = 500
lifetime = 10.5
preprocess = 10.0
randomness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 720, 1 )
gravity = Vector2( 0, 10 )
angular_velocity = 1.4013e-44
tangential_accel_curve = SubResource( 4 )
scale_amount = 2.0
scale_amount_random = 1.0
color_ramp = SubResource( 2 )

[node name="Grid" type="Node2D" parent="Pivot2D/Background"]
position = Vector2( 0, 74.26 )

[node name="TextureRect" type="TextureRect" parent="Pivot2D/Background/Grid"]
margin_left = 1692.0
margin_top = 61.0
margin_right = 3740.0
margin_bottom = 2952.0
rect_rotation = 90.0
rect_scale = Vector2( 0.09, 1.02 )
mouse_filter = 2
texture = SubResource( 8 )
stretch_mode = 1

[node name="Line2D" type="Line2D" parent="Pivot2D/Background/Grid"]
position = Vector2( -58.524, 0 )
scale = Vector2( 1.4649, 1 )
points = PoolVector2Array( -660.422, 60, 742.152, 60 )
width = 3.0
default_color = Color( 0.227451, 0.831373, 0.858824, 1 )
texture_mode = 313994176

[node name="Line2D4" type="Line2D" parent="Pivot2D/Background/Grid/Line2D"]
position = Vector2( 11.1068, -32.4534 )
points = PoolVector2Array( -660.422, 120, 742.152, 120 )
width = 3.0
default_color = Color( 0.227451, 0.831373, 0.858824, 1 )
texture_mode = 313994176

[node name="Line2D6" type="Line2D" parent="Pivot2D/Background/Grid/Line2D"]
position = Vector2( 11.1068, -47.4534 )
points = PoolVector2Array( -660.422, 200, 742.152, 200 )
width = 3.0
default_color = Color( 0.227451, 0.831373, 0.858824, 1 )
texture_mode = 313994176

[node name="Line2D5" type="Line2D" parent="Pivot2D/Background/Grid/Line2D"]
position = Vector2( 0, -43.99 )
points = PoolVector2Array( -660.422, 300, 742.152, 300 )
width = 3.0
default_color = Color( 0.227451, 0.831373, 0.858824, 1 )
texture_mode = 313994176

[node name="Line2D7" type="Line2D" parent="Pivot2D/Background/Grid/Line2D"]
visible = false
position = Vector2( 0, -30 )
points = PoolVector2Array( -660.422, 300, 742.152, 300 )
width = 3.0
default_color = Color( 0.227451, 0.831373, 0.858824, 1 )
texture_mode = 313994176

[node name="Line2D2" type="Line2D" parent="Pivot2D/Background/Grid"]
points = PoolVector2Array( 0, 60, 0, 800 )
width = 2.0
default_color = Color( 0.227451, 0.831373, 0.858824, 1 )
texture_mode = 313994176

[node name="Line2D3" type="Line2D" parent="Pivot2D/Background/Grid/Line2D2"]
points = PoolVector2Array( 100, 60, 200, 800 )
width = 2.0
default_color = Color( 0.227451, 0.831373, 0.858824, 1 )
texture_mode = 313994176

[node name="Line2D4" type="Line2D" parent="Pivot2D/Background/Grid/Line2D2"]
points = PoolVector2Array( -100, 60, -200, 800 )
width = 2.0
default_color = Color( 0.227451, 0.831373, 0.858824, 1 )
texture_mode = 1684633354

[node name="Line2D5" type="Line2D" parent="Pivot2D/Background/Grid/Line2D2"]
points = PoolVector2Array( 200, 60, 500, 800 )
width = 2.0
default_color = Color( 0.227451, 0.831373, 0.858824, 1 )
texture_mode = 313994176

[node name="Line2D6" type="Line2D" parent="Pivot2D/Background/Grid/Line2D2"]
points = PoolVector2Array( -200, 60, -500, 800 )
width = 2.0
default_color = Color( 0.227451, 0.831373, 0.858824, 1 )
texture_mode = 313994176

[node name="Line2D7" type="Line2D" parent="Pivot2D/Background/Grid/Line2D2"]
points = PoolVector2Array( 300, 60, 1000, 800 )
width = 2.0
default_color = Color( 0.227451, 0.831373, 0.858824, 1 )
texture_mode = 313994176

[node name="Line2D8" type="Line2D" parent="Pivot2D/Background/Grid/Line2D2"]
points = PoolVector2Array( -300, 60, -1000, 800 )
width = 2.0
default_color = Color( 0.227451, 0.831373, 0.858824, 1 )
texture_mode = 313994176

[node name="Line2D9" type="Line2D" parent="Pivot2D/Background/Grid/Line2D2"]
points = PoolVector2Array( 400, 60, 1600, 800 )
width = 2.0
default_color = Color( 0.227451, 0.831373, 0.858824, 1 )
texture_mode = 313994176

[node name="Line2D10" type="Line2D" parent="Pivot2D/Background/Grid/Line2D2"]
points = PoolVector2Array( -400, 60, -1600, 800 )
width = 2.0
default_color = Color( 0.227451, 0.831373, 0.858824, 1 )
texture_mode = 313994176

[node name="Solitaire" type="Node2D" parent="Pivot2D"]
script = ExtResource( 5 )

[node name="UI" type="Node2D" parent="Pivot2D/Solitaire"]

[node name="LevelInfoLabel" type="Label" parent="Pivot2D/Solitaire/UI"]
margin_left = -550.0
margin_top = 160.0
margin_right = -278.0
margin_bottom = 260.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 6 )
text = "
RANDOM
EASY"
valign = 2

[node name="TopLabels" type="Node2D" parent="Pivot2D/Solitaire/UI"]
position = Vector2( -640, -339.6 )

[node name="NinePatchRect2" type="NinePatchRect" parent="Pivot2D/Solitaire/UI/TopLabels"]
visible = false
margin_left = 60.48
margin_top = 10.0
margin_right = 447.48
margin_bottom = 27.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="LabelPoints" type="Label" parent="Pivot2D/Solitaire/UI/TopLabels"]
margin_left = 90.0
margin_top = 10.0
margin_right = 362.0
margin_bottom = 35.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
text = "POINTS: 000"
valign = 1

[node name="LabelMultiplier" type="Label" parent="Pivot2D/Solitaire/UI/TopLabels"]
margin_left = 90.0
margin_top = 10.0
margin_right = 643.0
margin_bottom = 35.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
text = "MULTIPLIER: 000"
align = 1
valign = 1

[node name="LabelTotal" type="Label" parent="Pivot2D/Solitaire/UI/TopLabels"]
margin_left = 670.0
margin_top = 10.0
margin_right = 930.0
margin_bottom = 35.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
text = "TOTAL: 000"
align = 2
valign = 1

[node name="Buttons" type="Node2D" parent="Pivot2D/Solitaire"]
position = Vector2( 354.19, 206.523 )

[node name="EndTurn" parent="Pivot2D/Solitaire/Buttons" instance=ExtResource( 8 )]
position = Vector2( -83, 0 )
scale = Vector2( 2, 2 )
m_sprite_index = 5
m_id = "end_turn"

[node name="Undo" parent="Pivot2D/Solitaire/Buttons" instance=ExtResource( 8 )]
scale = Vector2( 2, 2 )
m_sprite_index = 3
m_id = "undo"

[node name="Joker" parent="Pivot2D/Solitaire/Buttons" instance=ExtResource( 8 )]
position = Vector2( 83, 0 )
scale = Vector2( 2, 2 )
m_sprite_index = 2
m_id = "joker"

[node name="Menu" parent="Pivot2D/Solitaire/Buttons" instance=ExtResource( 8 )]
position = Vector2( 165, 0 )
scale = Vector2( 2, 2 )
m_sprite_index = 4
m_id = "menu"

[node name="UndoLabel" type="Label" parent="Pivot2D/Solitaire/Buttons"]
margin_left = -54.7868
margin_top = 32.7695
margin_right = 22.2132
margin_bottom = 98.769
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 6 )
custom_constants/line_spacing = -3
text = "1/1"
align = 1

[node name="JokerLabel" type="Label" parent="Pivot2D/Solitaire/Buttons"]
margin_left = 29.2132
margin_top = 32.7695
margin_right = 106.213
margin_bottom = 98.769
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 6 )
custom_constants/line_spacing = -3
text = "0/5"
align = 1

[node name="TooltipLabel" type="Label" parent="Pivot2D/Solitaire/Buttons"]
margin_left = -264.0
margin_top = 73.0
margin_right = 98.0
margin_bottom = 113.0
rect_scale = Vector2( 1.7, 1.7 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -6
text = "NEXT MATCH"
align = 1
autowrap = true

[node name="Stock" type="Area2D" parent="Pivot2D/Solitaire"]
position = Vector2( -60.01, 243.073 )
script = ExtResource( 10 )

[node name="Deck" type="Node2D" parent="Pivot2D/Solitaire/Stock"]

[node name="CardDownSprite" type="Sprite" parent="Pivot2D/Solitaire/Stock/Deck"]
position = Vector2( -32, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 11 )
vframes = 15
hframes = 4
frame = 53

[node name="CardDownSprite2" type="Sprite" parent="Pivot2D/Solitaire/Stock/Deck"]
position = Vector2( -24, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 11 )
vframes = 15
hframes = 4
frame = 53

[node name="CardDownSprite3" type="Sprite" parent="Pivot2D/Solitaire/Stock/Deck"]
position = Vector2( -16, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 11 )
vframes = 15
hframes = 4
frame = 53

[node name="CardDownSprite4" type="Sprite" parent="Pivot2D/Solitaire/Stock/Deck"]
position = Vector2( -8, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 11 )
vframes = 15
hframes = 4
frame = 53

[node name="CardDownSprite5" type="Sprite" parent="Pivot2D/Solitaire/Stock/Deck"]
scale = Vector2( 3, 3 )
texture = ExtResource( 11 )
vframes = 15
hframes = 4
frame = 53

[node name="Halo" type="Sprite" parent="Pivot2D/Solitaire/Stock"]
visible = false
scale = Vector2( 3, 3 )
texture = ExtResource( 11 )
vframes = 15
hframes = 4
frame = 54

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot2D/Solitaire/Stock"]
shape = SubResource( 9 )

[node name="AudioSource" type="AudioStreamPlayer2D" parent="Pivot2D/Solitaire/Stock"]

[node name="CardUpPos" type="Node2D" parent="Pivot2D/Solitaire/Stock"]
position = Vector2( 120, 0 )
scale = Vector2( 0.75, 0.75 )

[node name="LevelAnchor" type="Node2D" parent="Pivot2D/Solitaire"]
position = Vector2( 0, 24 )

[node name="ComboWindow" type="Node2D" parent="Pivot2D/Solitaire"]
position = Vector2( 134.49, 448 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Pivot2D/Solitaire/ComboWindow"]
margin_left = -27.68
margin_top = -29.0
margin_right = 22.32
margin_bottom = 21.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Pivot2D/Solitaire/ComboWindow"]
margin_left = -50.0
margin_top = -30.0
margin_bottom = -5.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
text = "55"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="Pivot2D/Solitaire/ComboWindow"]

[node name="AudioSource" type="AudioStreamPlayer2D" parent="Pivot2D/Solitaire/ComboWindow"]

[node name="PerfectMsg" type="Node2D" parent="Pivot2D/Solitaire"]
visible = false
position = Vector2( 0, -146.25 )
z_index = 500
script = ExtResource( 12 )

[node name="RichTextLabel" type="RichTextLabel" parent="Pivot2D/Solitaire/PerfectMsg"]
margin_left = -247.81
margin_right = 433.19
margin_bottom = 260.0
rect_scale = Vector2( 3, 3 )
rect_clip_content = false
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 13 )
custom_colors/default_color = Color( 0.835294, 0.196078, 0.505882, 1 )
text = "PERFECT"

[node name="Tween" type="Tween" parent="Pivot2D/Solitaire/PerfectMsg"]

[node name="AudioSource" type="AudioStreamPlayer2D" parent="Pivot2D/Solitaire/PerfectMsg"]

[node name="Particles2D" type="Particles2D" parent="Pivot2D/Solitaire/PerfectMsg"]
visible = false
position = Vector2( -240, 66.25 )
scale = Vector2( 4, 4 )
z_index = -1
emitting = false
amount = 50
lifetime = 2.0
one_shot = true
preprocess = 0.2
speed_scale = 2.0
explosiveness = 0.5
randomness = 0.13
process_material = SubResource( 12 )

[node name="Particles2D2" type="Particles2D" parent="Pivot2D/Solitaire/PerfectMsg"]
visible = false
position = Vector2( 230, 66.25 )
scale = Vector2( 4, 4 )
z_index = -1
emitting = false
amount = 50
lifetime = 2.0
one_shot = true
preprocess = 0.2
speed_scale = 2.0
explosiveness = 0.5
randomness = 0.13
process_material = SubResource( 12 )

[node name="Particles2DCPU" type="CPUParticles2D" parent="Pivot2D/Solitaire/PerfectMsg"]
visible = false
position = Vector2( -240, 66.25 )
scale = Vector2( 4, 4 )
z_index = -1
emitting = false
amount = 50
lifetime = 2.0
one_shot = true
preprocess = 0.2
speed_scale = 2.0
explosiveness = 0.5
randomness = 0.13
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 34.48
initial_velocity_random = 0.15
color_ramp = SubResource( 10 )

[node name="Particles2D2CPU" type="CPUParticles2D" parent="Pivot2D/Solitaire/PerfectMsg"]
visible = false
position = Vector2( 230, 66.25 )
scale = Vector2( 4, 4 )
z_index = -1
emitting = false
amount = 50
lifetime = 2.0
one_shot = true
preprocess = 0.2
speed_scale = 2.0
explosiveness = 0.5
randomness = 0.13
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 34.48
initial_velocity_random = 0.15
color_ramp = SubResource( 10 )

[node name="Menu" type="Node2D" parent="Pivot2D"]
z_index = 4096
script = ExtResource( 14 )

[node name="MouseBlocker" type="ColorRect" parent="Pivot2D/Menu"]
visible = false
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="Main" type="Node2D" parent="Pivot2D/Menu"]
position = Vector2( 0, -720 )

[node name="BG" type="ColorRect" parent="Pivot2D/Menu/Main"]
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0.870588, 0.207843, 0.505882, 1 )

[node name="Buttons" type="VBoxContainer" parent="Pivot2D/Menu/Main"]
margin_left = -347.613
margin_top = -254.36
margin_right = -103.613
margin_bottom = 5.64
rect_scale = Vector2( 1.5, 1.5 )
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="Button_1" parent="Pivot2D/Menu/Main/Buttons" instance=ExtResource( 15 )]
margin_right = 244.0
margin_bottom = 40.0

[node name="Button_2" parent="Pivot2D/Menu/Main/Buttons" instance=ExtResource( 15 )]
margin_top = 44.0
margin_right = 244.0
margin_bottom = 84.0

[node name="Button_3" parent="Pivot2D/Menu/Main/Buttons" instance=ExtResource( 15 )]
margin_top = 88.0
margin_right = 244.0
margin_bottom = 128.0

[node name="Button_4" parent="Pivot2D/Menu/Main/Buttons" instance=ExtResource( 15 )]
margin_top = 132.0
margin_right = 244.0
margin_bottom = 172.0

[node name="Button_5" parent="Pivot2D/Menu/Main/Buttons" instance=ExtResource( 15 )]
margin_top = 176.0
margin_right = 244.0
margin_bottom = 216.0

[node name="bottomText" type="Label" parent="Pivot2D/Menu/Main"]
margin_left = -635.0
margin_top = 210.0
margin_right = 214.0
margin_bottom = 299.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 6 )
text = "(c) Álvaro García - www.binarynonsense.com
test version: 0.1.2 - available at: binarynonsense.itch.io/solitaire"
align = 1
valign = 2

[node name="TITLE" type="Label" parent="Pivot2D/Menu/Main"]
margin_left = -140.616
margin_top = -322.848
margin_right = 218.384
margin_bottom = -302.848
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
text = "GAME PAUSED"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Node2D" parent="Pivot2D/Menu"]
visible = false
position = Vector2( 0, -720 )

[node name="BG" type="ColorRect" parent="Pivot2D/Menu/Options"]
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0.0823529, 0.490196, 0.505882, 1 )

[node name="Buttons" type="VBoxContainer" parent="Pivot2D/Menu/Options"]
margin_left = -347.613
margin_top = -254.36
margin_right = -103.613
margin_bottom = 5.64
rect_scale = Vector2( 1.5, 1.5 )
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="Button_22" parent="Pivot2D/Menu/Options/Buttons" instance=ExtResource( 15 )]
margin_right = 244.0
margin_bottom = 40.0

[node name="Button_23" parent="Pivot2D/Menu/Options/Buttons" instance=ExtResource( 15 )]
margin_top = 44.0
margin_right = 244.0
margin_bottom = 84.0

[node name="Button_24" parent="Pivot2D/Menu/Options/Buttons" instance=ExtResource( 15 )]
margin_top = 88.0
margin_right = 244.0
margin_bottom = 128.0

[node name="Button_25" parent="Pivot2D/Menu/Options/Buttons" instance=ExtResource( 15 )]
margin_top = 132.0
margin_right = 244.0
margin_bottom = 172.0

[node name="Button_21" parent="Pivot2D/Menu/Options/Buttons" instance=ExtResource( 15 )]
margin_top = 176.0
margin_right = 244.0
margin_bottom = 216.0

[node name="TITLE" type="Label" parent="Pivot2D/Menu/Options"]
margin_left = -140.616
margin_top = -322.848
margin_right = 218.384
margin_bottom = -302.848
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
text = "OPTIONS"
align = 2
valign = 1

[node name="Credits" type="Node2D" parent="Pivot2D/Menu"]
visible = false
position = Vector2( 0, -720 )

[node name="BG" type="ColorRect" parent="Pivot2D/Menu/Credits"]
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0.278431, 0.0352941, 0.878431, 1 )

[node name="BG2" type="ColorRect" parent="Pivot2D/Menu/Credits"]
visible = false
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Buttons" type="VBoxContainer" parent="Pivot2D/Menu/Credits"]
margin_left = -347.613
margin_top = 233.52
margin_right = -103.614
margin_bottom = 420.52
rect_scale = Vector2( 1.5, 1.5 )
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="Button_11" parent="Pivot2D/Menu/Credits/Buttons" instance=ExtResource( 15 )]
margin_right = 243.0
margin_bottom = 40.0
text = "> BACK"

[node name="credits" type="Label" parent="Pivot2D/Menu/Credits"]
margin_left = -340.0
margin_top = -56.36
margin_right = 233.0
margin_bottom = 285.64
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = ExtResource( 6 )
text = "A game by:
ÁLVARO GARCÍA
 www.binarynonsense.com
"
align = 1
autowrap = true

[node name="credits2" type="Label" parent="Pivot2D/Menu/Credits"]
margin_left = -370.0
margin_top = 50.0
margin_right = 300.0
margin_bottom = 287.0
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = ExtResource( 6 )
text = "Made with Godot Engine (godotengine.org), using CC0 (public domain) assets by kenney.nl, cynicmusic, MrLindstrom, SubspaceAudio... and card sprites based on CC-BY 3.0 (creativecommons.org/licenses/by/3.0) images by Nora Shishi, along with additions by rh0, usr_share, and Kumpu from opengameart.org/content/dice-trumps"
autowrap = true

[node name="TITLE" type="Label" parent="Pivot2D/Menu/Credits"]
margin_left = -140.616
margin_top = -322.848
margin_right = 218.384
margin_bottom = -302.848
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
text = "CREDITS"
align = 2
valign = 1

[node name="bn_logo_120" type="Sprite" parent="Pivot2D/Menu/Credits"]
position = Vector2( 0, -170 )
texture = ExtResource( 16 )

[node name="Score" type="Node2D" parent="Pivot2D/Menu"]
visible = false
position = Vector2( 0, -720 )

[node name="BG" type="ColorRect" parent="Pivot2D/Menu/Score"]
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0.227451, 0.831373, 0.858824, 1 )

[node name="Buttons" type="VBoxContainer" parent="Pivot2D/Menu/Score"]
margin_left = -430.0
margin_top = 106.0
margin_right = -170.0
margin_bottom = 232.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_group_": true
}

[node name="Button_21" parent="Pivot2D/Menu/Score/Buttons" instance=ExtResource( 15 )]
margin_top = 86.0
margin_right = 260.0
margin_bottom = 126.0
text = "> PLAY NEW HAND"

[node name="Button_22" parent="Pivot2D/Menu/Score/Buttons" instance=ExtResource( 15 )]
visible = false
margin_top = 44.0
margin_right = 260.0
margin_bottom = 84.0
text = "> PLAY NEW HAND"

[node name="text" type="Label" parent="Pivot2D/Menu/Score"]
margin_left = -431.0
margin_top = -218.0
margin_right = 148.0
margin_bottom = 124.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 6 )
text = "Score: 000
Multiplier: 000
Perfect bonus: 0
--------------
TOTAL = 0000"
autowrap = true

[node name="TITLE" type="Label" parent="Pivot2D/Menu/Score"]
margin_left = -140.616
margin_top = -322.848
margin_right = 218.384
margin_bottom = -302.848
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
text = "FINAL SCORE"
align = 2
valign = 1

[node name="AudioSource" type="AudioStreamPlayer2D" parent="Pivot2D/Menu"]

[node name="Tween" type="Tween" parent="Pivot2D/Menu"]
